tests/NormalTests/paczka1/small_fuzzy/26783722.err
Error in line 2: A710 A604 80,7
Error in line 5: Afj A563 83,2
Error in line 10: Afj A604 77,7
Error in line 14: kXBaHRHg A604 83,4
